--- a/src/lang/en.json
+++ b/src/lang/en.json
@@ -710,12 +710,34 @@
   "macros.combat.dialog.waitingAttack.title": "Waiting for attacker...",
   "macros.combat.dialog.waitingDefense.title": "Waiting for defender...",
   "macros.combat.dialog.waitingDefenseForAttack.title": "Waiting for attacker sent the attack...",
+  "macros.combat.dialog.hasCritic.title": "Perform a critical attack on {target}",
+  "macros.combat.dialog.targetedAttack.title": "Ataque apuntado",
+  "macros.combat.dialog.targetedAttack.none.title": "-",
+  "macros.combat.dialog.targetedAttack.neck.title": "Neck",
+  "macros.combat.dialog.targetedAttack.head.title": "Head",
+  "macros.combat.dialog.targetedAttack.elbow.title": "Elbow",
+  "macros.combat.dialog.targetedAttack.heart.title": "Heart",
+  "macros.combat.dialog.targetedAttack.groin.title": "Groin",
+  "macros.combat.dialog.targetedAttack.foot.title": "Foot",
+  "macros.combat.dialog.targetedAttack.hand.title": "Hand",
+  "macros.combat.dialog.targetedAttack.knee.title": "Knee",
+  "macros.combat.dialog.targetedAttack.abdomen.title": "Abdomen",
+  "macros.combat.dialog.targetedAttack.arm.title": "Arm",
+  "macros.combat.dialog.targetedAttack.thigh.title": "Thigh",
+  "macros.combat.dialog.targetedAttack.calf.title": "Calf",
+  "macros.combat.dialog.targetedAttack.torso.title": "Torso",
+  "macros.combat.dialog.targetedAttack.eye.title": "Eye",
+  "macros.combat.dialog.targetedAttack.wrist.title": "Wrist",
+  "macros.combat.dialog.targetedAttack.shoulder.title": "Shoulder",
   "macros.combat.dialog.specificAttack.title": "Specific Attack",
-  "macros.combat.dialog.specificAttack.causeDamage.title": "Apply Damage?",
+  "macros.combat.dialog.specificAttack.causeDamage.title": "Apply damage",
   "macros.combat.dialog.specificAttack.none.title": "-",
-  "macros.combat.dialog.specificAttack.knockDown.title": "Knock Down",
+  "macros.combat.dialog.specificAttack.knockDown.title": "Knock down",
+  "macros.combat.dialog.specificAttack.disable.title": "Disable",
   "macros.combat.dialog.specificAttack.disarm.title": "Disarm",
   "macros.combat.dialog.specificAttack.immobilize.title": "Immobilize",
+  "macros.combat.dialog.specificAttack.knockOut.title": "Knock out",
+  "macros.combat.dialog.specificAttack.targeted.title": "Targeted",
   "macros.combat.dialog.weapon.critic.title": "Critic",
   "macros.combat.dialog.weapon.title": "Weapon",
   "macros.combat.dialog.weaponAttack.title": "Weapon attack",
