--- a/src/lang/es.json
+++ b/src/lang/es.json
@@ -710,12 +710,34 @@
   "macros.combat.dialog.waitingAttack.title": "Esperando por el atacante...",
   "macros.combat.dialog.waitingDefense.title": "Esperando por el defensor...",
   "macros.combat.dialog.waitingDefenseForAttack.title": "Esperando al atacante para enviar petición de defensa...",
+  "macros.combat.dialog.hasCritic.title": "Realiza un crítico a {target}",
+  "macros.combat.dialog.targetedAttack.title": "Ataque apuntado",
+  "macros.combat.dialog.targetedAttack.none.title": "-",
+  "macros.combat.dialog.targetedAttack.neck.title": "Cuello",
+  "macros.combat.dialog.targetedAttack.head.title": "Cabeza",
+  "macros.combat.dialog.targetedAttack.elbow.title": "Codo",
+  "macros.combat.dialog.targetedAttack.heart.title": "Corazón",
+  "macros.combat.dialog.targetedAttack.groin.title": "Ingle",
+  "macros.combat.dialog.targetedAttack.foot.title": "Pie",
+  "macros.combat.dialog.targetedAttack.hand.title": "Mano",
+  "macros.combat.dialog.targetedAttack.knee.title": "Rodilla",
+  "macros.combat.dialog.targetedAttack.abdomen.title": "Abdomen",
+  "macros.combat.dialog.targetedAttack.arm.title": "Brazo",
+  "macros.combat.dialog.targetedAttack.thigh.title": "Muslo",
+  "macros.combat.dialog.targetedAttack.calf.title": "Pantorrilla",
+  "macros.combat.dialog.targetedAttack.torso.title": "Torso",
+  "macros.combat.dialog.targetedAttack.eye.title": "Ojo",
+  "macros.combat.dialog.targetedAttack.wrist.title": "Muñeca",
+  "macros.combat.dialog.targetedAttack.shoulder.title": "Hombro",
   "macros.combat.dialog.specificAttack.title": "Ataque específico",
-  "macros.combat.dialog.specificAttack.causeDamage.title": "¿Aplicar Daño?",
+  "macros.combat.dialog.specificAttack.causeDamage.title": "Aplicar Daño",
   "macros.combat.dialog.specificAttack.none.title": "-",
   "macros.combat.dialog.specificAttack.knockDown.title": "Derribo",
+  "macros.combat.dialog.specificAttack.disable.title": "Inutilizar",
   "macros.combat.dialog.specificAttack.disarm.title": "Desarmar",
   "macros.combat.dialog.specificAttack.immobilize.title": "Presa",
+  "macros.combat.dialog.specificAttack.knockOut.title": "Inconsciencia",
+  "macros.combat.dialog.specificAttack.targeted.title": "Apuntado",
   "macros.combat.dialog.weapon.critic.title": "Crítico",
   "macros.combat.dialog.weapon.title": "Arma",
   "macros.combat.dialog.weaponAttack.title": "Ataque del arma",
