fix-localization-criticIfBeAble

--- a/src/lang/en.json
+++ b/src/lang/en.json
@@ -723,12 +723,22 @@
   "macros.combat.dialog.targetedAttack.knee.title": "Knee",
   "macros.combat.dialog.targetedAttack.abdomen.title": "Abdomen",
   "macros.combat.dialog.targetedAttack.arm.title": "Arm",
+  "macros.combat.dialog.targetedAttack.upperForearm.title": "Upper forearm",
+  "macros.combat.dialog.targetedAttack.lowerForearm.title": "Lower forearm",
+  "macros.combat.dialog.targetedAttack.leg.title": "Leg",
   "macros.combat.dialog.targetedAttack.thigh.title": "Thigh",
   "macros.combat.dialog.targetedAttack.calf.title": "Calf",
   "macros.combat.dialog.targetedAttack.torso.title": "Torso",
+  "macros.combat.dialog.targetedAttack.ribs.title": "Ribs",
+  "macros.combat.dialog.targetedAttack.stomach.title": "Stomach",
+  "macros.combat.dialog.targetedAttack.kidneys.title": "Kidneys",
+  "macros.combat.dialog.targetedAttack.chest.title": "Chest",
   "macros.combat.dialog.targetedAttack.eye.title": "Eye",
   "macros.combat.dialog.targetedAttack.wrist.title": "Wrist",
   "macros.combat.dialog.targetedAttack.shoulder.title": "Shoulder",
+  "macros.combat.dialog.targetedAttack.side.left.title": "[Left]",
+  "macros.combat.dialog.targetedAttack.side.right.title": "[Right]",
+  "macros.combat.dialog.targetedAttack.side.none.title": "[-]",
   "macros.combat.dialog.specificAttack.title": "Specific Attack",
   "macros.combat.dialog.specificAttack.causeDamage.title": "Apply damage",
   "macros.combat.dialog.specificAttack.none.title": "-",
