--- a/src/lang/es.json
+++ b/src/lang/es.json
@@ -723,12 +723,22 @@
   "macros.combat.dialog.targetedAttack.knee.title": "Rodilla",
   "macros.combat.dialog.targetedAttack.abdomen.title": "Abdomen",
   "macros.combat.dialog.targetedAttack.arm.title": "Brazo",
+  "macros.combat.dialog.targetedAttack.upperForearm.title": "Antebrazo superior",
+  "macros.combat.dialog.targetedAttack.lowerForearm.title": "Antebrazo inferior",
+  "macros.combat.dialog.targetedAttack.leg.title": "Pierna",
   "macros.combat.dialog.targetedAttack.thigh.title": "Muslo",
   "macros.combat.dialog.targetedAttack.calf.title": "Pantorrilla",
   "macros.combat.dialog.targetedAttack.torso.title": "Torso",
+  "macros.combat.dialog.targetedAttack.ribs.title": "Costillas",
+  "macros.combat.dialog.targetedAttack.stomach.title": "Estómago",
+  "macros.combat.dialog.targetedAttack.kidneys.title": "Riñones",
+  "macros.combat.dialog.targetedAttack.chest.title": "Pecho",
   "macros.combat.dialog.targetedAttack.eye.title": "Ojo",
   "macros.combat.dialog.targetedAttack.wrist.title": "Muñeca",
   "macros.combat.dialog.targetedAttack.shoulder.title": "Hombro",
+  "macros.combat.dialog.targetedAttack.side.left.title": "[Izquierda]",
+  "macros.combat.dialog.targetedAttack.side.right.title": "[Derecha]",
+  "macros.combat.dialog.targetedAttack.side.none.title": "[-]",
   "macros.combat.dialog.specificAttack.title": "Ataque específico",
   "macros.combat.dialog.specificAttack.causeDamage.title": "Aplicar Daño",
   "macros.combat.dialog.specificAttack.none.title": "-",
