--- a/src/lang/fr.json
+++ b/src/lang/fr.json
@@ -473,6 +473,7 @@
   "anima.ui.settings.advancedSettings.fumbles.title": "Marge de Fumble",
   "anima.ui.settings.advancedSettings.openRolls.title": "Marge d'ouverte",
   "anima.ui.settings.advancedSettings.title": "Paramètres avancés",
+  "anima.ui.settings.modifiers.title": "Modificadores",
   "anima.ui.systemSettings.autoAcceptCombatRequests.title": "Accepter automatiquement les demandes de combat",
   "anima.ui.systemSettings.autoAcceptCombatRequests.hint.title": "Dans le combat autogéré, les demandes de combat au MJ seront automatiquement acceptées en fonction de si cette option est activée",
   "anima.ui.systemSettings.roundDamageInMultiplesOf5.hint.title": "Arrondir au multiple de 5. Applicable aux dégâts",
