actor-active-effects

--- a/src/lang/es.json
+++ b/src/lang/es.json
@@ -531,6 +531,12 @@
   "anima.ui.systemSettings.defaultProjectileMacro.hint.title": "En caso de que el arma sea un projectil de disparo tomará el nombre del Macro que se ingrese aquí para el Combate",
   "anima.ui.systemSettings.missValueAttackMacro.title": "Valor de Fallo al Atacar para la Animación",
   "anima.ui.systemSettings.missValueAttackMacro.hint.title": "Al momento de ejecutar un macro en el combate se envía un argumento de fallo, si el valor de la HA es menor que el valor de Fallo y el defensor ganó el combate se considera que falló el ataque (se usa en animaciones)",
+  "anima.ui.effects.effectsList.title": "Efectos",
+  "anima.ui.effects.effectsList.name.title": "Efecto",
+  "anima.ui.effects.effectsList.enable.title": "Activar",
+  "anima.ui.effects.effectsList.disable.title": "Desactivar",
+  "anima.ui.effects.effectsList.edit.title": "Editar",
+  "anima.ui.effects.effectsList.delete.title": "Eliminar",
   "anima.ui.tabs.combat": "Combate",
   "anima.ui.tabs.damageResistance": "Acumulación",
   "anima.ui.tabs.domine": "Domine",
@@ -539,6 +545,7 @@
   "anima.ui.tabs.psychic": "Psíquico",
   "anima.ui.tabs.secondaries": "Secundarias",
   "anima.ui.titleSection.title": "Títulos",
+  "anima.ui.tabs.effects": "Efectos",
   "anima.ui.weapons.different.title": "Diferente / Desarmado",
   "anima.ui.weapons.known.title": "Conocida",
   "anima.ui.weapons.mixed.title": "Mixta",
