--- a/src/lang/en.json
+++ b/src/lang/en.json
@@ -530,6 +530,12 @@
   "anima.ui.systemSettings.defaultProjectileMacro.hint.title": "If the weapon is a shooting projectile, it will take the name of the Macro that is entered here for the Combat",
   "anima.ui.systemSettings.missValueAttackMacro.title": "Attack Failure Value for Animations",
   "anima.ui.systemSettings.missValueAttackMacro.hint.title": "When executing a macro in combat, a failure argument is sent; if the HA value is less than the Failure value and the defender won the combat, it is considered that the attack failed (used in animations)",
+  "anima.ui.effects.effectsList.title": "Effects",
+  "anima.ui.effects.effectsList.name.title": "Effect",
+  "anima.ui.effects.effectsList.enable.title": "Enable",
+  "anima.ui.effects.effectsList.disable.title": "Disable",
+  "anima.ui.effects.effectsList.edit.title": "Edit",
+  "anima.ui.effects.effectsList.delete.title": "Delete",
   "anima.ui.tabs.combat": "Combat",
   "anima.ui.tabs.damageResistance": "Damage Resistance",
   "anima.ui.tabs.domine": "Domine",
@@ -537,6 +543,7 @@
   "anima.ui.tabs.mystic": "Mystic",
   "anima.ui.tabs.psychic": "Psychic",
   "anima.ui.tabs.secondaries": "Secondaries",
+  "anima.ui.tabs.effects": "Effects",
   "anima.ui.titleSection.title": "Titles",
   "anima.ui.weapons.different.title": "Different / Unarmed",
   "anima.ui.weapons.known.title": "Known",
