actor-active-effects

--- a/src/lang/es.json
+++ b/src/lang/es.json
@@ -514,6 +514,12 @@
   "anima.ui.systemSettings.useCombatTable.hint.title": "Calcular daño usando la Tabla de combate que aparece en el Core Exxet pg. 334-335",
   "anima.ui.systemSettings.useDistanceAutomation.title": "Automatizar distancia en el combate",
   "anima.ui.systemSettings.useDistanceAutomation.hint.title": "Calcula la distancia entre el atacante y el defensor para agregar de forma automática los modificadores correspondiente al combate a distancia",
+  "anima.ui.effects.effectsList.title": "Efectos",
+  "anima.ui.effects.effectsList.name.title": "Efecto",
+  "anima.ui.effects.effectsList.enable.title": "Activar",
+  "anima.ui.effects.effectsList.disable.title": "Desactivar",
+  "anima.ui.effects.effectsList.edit.title": "Editar",
+  "anima.ui.effects.effectsList.delete.title": "Eliminar",
   "anima.ui.tabs.combat": "Combate",
   "anima.ui.tabs.damageResistance": "Acumulación",
   "anima.ui.tabs.domine": "Domine",
@@ -522,6 +528,7 @@
   "anima.ui.tabs.psychic": "Psíquico",
   "anima.ui.tabs.secondaries": "Secundarias",
   "anima.ui.titleSection.title": "Títulos",
+  "anima.ui.tabs.effects": "Efectos",
   "anima.ui.weapons.different.title": "Diferente / Desarmado",
   "anima.ui.weapons.known.title": "Conocida",
   "anima.ui.weapons.mixed.title": "Mixta",
