combat-visibility-techniques-new-techniques sheet

--- a/src/lang/en.json
+++ b/src/lang/en.json
@@ -19,6 +19,9 @@
   "anima.ui.characteristics.power": "Power",
   "anima.ui.characteristics.strength": "Strength",
   "anima.ui.characteristics.willPower": "Willpower",
+  "anima.ui.combatVisibility.attack.title": "Attack",
+  "anima.ui.combatVisibility.defense.title": "Defense",
+  "anima.ui.combatVisibility.counterAttack.title": "Counterattack",
   "anima.ui.combat.ammo.amount.title": "Amount",
   "anima.ui.combat.ammo.breaking.base.title": "Base breaking",
   "anima.ui.combat.ammo.breaking.title": "Breaking",
@@ -177,6 +180,11 @@
   "anima.ui.domine.techniques.technique.footer.power.title": "Pow",
   "anima.ui.domine.techniques.technique.footer.strength.title": "Str",
   "anima.ui.domine.techniques.technique.footer.willPower.title": "Wil",
+  "anima.ui.domine.techniques.technique.footer.maintenance.title": "Mant.",
+  "anima.ui.domine.sustenance.none.title": "-",
+  "anima.ui.domine.sustenance.lesser.title": "Lesser",
+  "anima.ui.domine.sustenance.greater.title": "Greater",
+  "anima.ui.domine.sustenance.title": "Sustenance",
   "anima.ui.domine.techniques.technique.header.name.title": "Technique",
   "anima.ui.domine.techniques.title": "Techniques",
   "anima.ui.elanSection.elanRow.level": "Lvl",
@@ -610,6 +618,7 @@
   "macros.combat.dialog.at.title": "AT",
   "macros.combat.dialog.attack.title": "Attack",
   "macros.combat.dialog.attackButton.title": "Send attack",
+  "macros.combat.dialog.activateTechniqueButton.title": "Activate technique",
   "macros.combat.dialog.attackConfirm.body.title": "Do you want to attack {target}?",
   "macros.combat.dialog.attackConfirm.title": "Confirm attack",
   "macros.combat.dialog.attackSent.title": "Attack sent. Waiting for combat results...",
@@ -755,6 +764,7 @@
   "macros.combat.dialog.specificAttack.immobilize.title": "Immobilize",
   "macros.combat.dialog.specificAttack.knockOut.title": "Knock out",
   "macros.combat.dialog.specificAttack.targeted.title": "Targeted",
+  "macros.combat.dialog.combat.technique.title": "Domine technique",
   "macros.combat.dialog.weapon.critic.title": "Critic",
   "macros.combat.dialog.weapon.title": "Weapon",
   "macros.combat.dialog.weaponAttack.title": "Weapon attack",
