--- a/src/lang/es.json
+++ b/src/lang/es.json
@@ -19,6 +19,9 @@
   "anima.ui.characteristics.power": "Poder",
   "anima.ui.characteristics.strength": "Fuerza",
   "anima.ui.characteristics.willPower": "Voluntad",
+  "anima.ui.combatVisibility.attack.title": "Ataque",
+  "anima.ui.combatVisibility.defense.title": "Defensa",
+  "anima.ui.combatVisibility.counterAttack.title": "Contraataque",
   "anima.ui.combat.ammo.amount.title": "Cantidad",
   "anima.ui.combat.ammo.breaking.base.title": "Rotura base",
   "anima.ui.combat.ammo.breaking.title": "Rotura",
@@ -177,7 +180,12 @@
   "anima.ui.domine.techniques.technique.footer.power.title": "Pod",
   "anima.ui.domine.techniques.technique.footer.strength.title": "Fue",
   "anima.ui.domine.techniques.technique.footer.willPower.title": "Vol",
+  "anima.ui.domine.techniques.technique.footer.maintenance.title": "Mant.",
   "anima.ui.domine.techniques.technique.header.name.title": "Técnica",
+  "anima.ui.domine.sustenance.none.title": "-",
+  "anima.ui.domine.sustenance.lesser.title": "Menor",
+  "anima.ui.domine.sustenance.greater.title": "Mayor",
+  "anima.ui.domine.sustenance.title": "Sostenimiento",
   "anima.ui.domine.techniques.title": "Técnicas",
   "anima.ui.elanSection.elanRow.level": "Nv",
   "anima.ui.elanSection.elanRow.name": "Potencia",
@@ -608,6 +616,7 @@
   "macros.combat.dialog.at.title": "TA",
   "macros.combat.dialog.attack.title": "Ataque",
   "macros.combat.dialog.attackButton.title": "Enviar ataque",
+  "macros.combat.dialog.activateTechniqueButton.title": "Activar técnica",
   "macros.combat.dialog.attackConfirm.body.title": "¿Quieres atacar a {target}?",
   "macros.combat.dialog.attackConfirm.title": "Confirmar ataque",
   "macros.combat.dialog.attackSent.title": "Ataque enviado. Esperando a los resultados del combate...",
@@ -755,6 +764,7 @@
   "macros.combat.dialog.specificAttack.immobilize.title": "Presa",
   "macros.combat.dialog.specificAttack.knockOut.title": "Inconsciencia",
   "macros.combat.dialog.specificAttack.targeted.title": "Apuntado",
+  "macros.combat.dialog.combat.technique.title": "Técnica de dominio",
   "macros.combat.dialog.weapon.critic.title": "Crítico",
   "macros.combat.dialog.weapon.title": "Arma",
   "macros.combat.dialog.weaponAttack.title": "Ataque del arma",
