--- a/src/lang/es.json
+++ b/src/lang/es.json
@@ -394,7 +394,7 @@
   "anima.ui.psychic.psychicPowers.discipline.teleportation.title": "Teletransporte",
   "anima.ui.psychic.psychicPowers.discipline.light.title": "Luz",
   "anima.ui.psychic.psychicPowers.discipline.hipersensibilidad.title": "Hipersensibilidad",
-  "anima.ui.psychic.psychicPowers.discipline.matrial.title": "-",
+  "anima.ui.psychic.psychicPowers.discipline.matrixPowers.title": "-",
   "anima.ui.psychic.psychicPowers.power.footer.bonus.title": "Bono",
   "anima.ui.psychic.psychicPowers.power.footer.hasMaintenance.title": "Mant.",
   "anima.ui.psychic.psychicPowers.power.footer.visible.title": "Visible",
