update-ABFPsychicRoll-psychicShield-pyschicFatigue

--- a/src/lang/es.json
+++ b/src/lang/es.json
@@ -622,7 +622,7 @@
   "macros.combat.dialog.castOverride.title": "Lanzar conjuro sin validaciones",
   "macros.combat.dialog.critic.title": "Crítico",
   "macros.combat.dialog.damage.title": "Daño",
-  "macros.combat.dialog.psychic.damage.title": "Modificador al daño",
+  "macros.combat.dialog.psychic.damageModifier.title": "Modificador al daño",
   "macros.combat.dialog.damageDeal.title": "Daño hecho",
   "macros.combat.dialog.defend.title": "Defensa",
   "macros.combat.dialog.defender.title": "Defensor",
@@ -680,7 +680,7 @@
   "macros.combat.dialog.psychicAttack.title": "Ataca con el poder mental {power} a {target} con un potencial de {potential}",
   "macros.combat.dialog.psychicDefense.title": "Se defiende con el poder mental {power} de {target}",
   "macros.combat.dialog.psychicPotential.title": "Potencial Psíquico",
-  "macros.combat.dialog.psychicPotentialFatigue.title": "Potencial Psíquico falla pierdes {fatiguePen} puntos de Fatiga",
+  "macros.combat.dialog.psychicPotentialFatigue.title": "Falla potencial psíquico, pierde <b>{fatiguePen}</b> puntos de Fatiga",
   "macros.combat.dialog.psychicPower.title": "Poder psíquico",
   "macros.combat.dialog.psychicShield.title": "Escudo psíquico",
   "macros.combat.dialog.shieldValue.title": "Puntos de vida",
