--- a/src/lang/en.json
+++ b/src/lang/en.json
@@ -624,7 +624,7 @@
   "macros.combat.dialog.castOverride.title": "Cast spell without validations",
   "macros.combat.dialog.critic.title": "Critic",
   "macros.combat.dialog.damage.title": "Damage",
-  "macros.combat.dialog.psychic.damage.title": "Damage modifier",
+  "macros.combat.dialog.psychic.damageModifier.title": "Damage modifier",
   "macros.combat.dialog.damageDeal.title": "Damage deal",
   "macros.combat.dialog.defend.title": "Defense",
   "macros.combat.dialog.defender.title": "Defender",
