update-supernaturalShields-unified

--- a/src/lang/en.json
+++ b/src/lang/en.json
@@ -131,6 +131,10 @@
   "anima.ui.combat.weapons.strRequired.twoHands.title": "2H STR req.",
   "anima.ui.combat.weapons.title": "Weapons",
   "anima.ui.combat.weapons.weaponStrength.title": "Weapon STR",
+  "anima.ui.combat.supernaturalShields.origin.title": "Origin",
+  "anima.ui.combat.supernaturalShields.shieldPoints.title": "Life points",
+  "anima.ui.combat.supernaturalShields.name.title": "Shield",
+  "anima.ui.combat.supernaturalShields.title": "Supernatural shields",
   "anima.ui.contactSection.contactRow.description": "Description",
   "anima.ui.contactSection.contactRow.name": "Name",
   "anima.ui.contactSection.title": "Contacts",
@@ -369,9 +373,6 @@
   "anima.ui.psychic.mentalPattern.title": "Mental Patterns",
   "anima.ui.psychic.psychicDiscipline.title": "Psychic Disciplines",
   "anima.ui.psychic.psychicDiscipline.name.imbalance": "Psy. Imb.",
-  "anima.ui.psychic.psychicShields.shieldPoints.title": "Life points",
-  "anima.ui.psychic.psychicShields.name.title": "Shield",
-  "anima.ui.psychic.psychicShields.title": "Supernatural shields",
   "anima.ui.psychic.psychicPoints.power.title": "Final",
   "anima.ui.psychic.psychicPoints.title": "PP",
   "anima.ui.psychic.psychicPotential.potential.title": "Potential",
@@ -534,6 +535,7 @@
   "contextualMenu.common.options.edit": "Edit",
   "contextualMenu.elan.options.addPower": "Add power",
   "contextualMenu.elan.options.deletePower": "Delete power",
+  "contextualMenu.superntarualShield.options.release": "Release",
   "dialogs.accept": "Accept",
   "dialogs.cancel": "Cancel",
   "dialogs.continue": "Continue",
@@ -575,6 +577,7 @@
   "dialogs.items.title.content": "Title name",
   "dialogs.items.weapons.content": "Weapon name",
   "dialogs.mod.content": "Modifier",
+  "dialogs.newSupernaturalShield.title": "New Supernatural Shield",
   "dialogs.psychicShield.difficulty.special": "Dice Roll",
   "dialogs.psychicShield.difficulty.title": "Difficulty",
   "dialogs.psychicShield.power.title": "Power",
