--- a/src/lang/es.json
+++ b/src/lang/es.json
@@ -131,6 +131,10 @@
   "anima.ui.combat.weapons.strRequired.twoHands.title": "2M FUE req.",
   "anima.ui.combat.weapons.title": "Armas",
   "anima.ui.combat.weapons.weaponStrength.title": "FUE Arma",
+  "anima.ui.combat.supernaturalShields.origin.title": "Origen",
+  "anima.ui.combat.supernaturalShields.shieldPoints.title": "Puntos de vida",
+  "anima.ui.combat.supernaturalShields.name.title": "Escudo",
+  "anima.ui.combat.supernaturalShields.title": "Escudos Sobrenaturales",
   "anima.ui.contactSection.contactRow.description": "Descripción",
   "anima.ui.contactSection.contactRow.name": "Nombre",
   "anima.ui.contactSection.title": "Contactos",
@@ -369,9 +373,6 @@
   "anima.ui.psychic.mentalPattern.title": "Patrones Mentales",
   "anima.ui.psychic.psychicDiscipline.title": "Disciplinas Psíquicas",
   "anima.ui.psychic.psychicDiscipline.name.imbalance": "Des. Psq.",
-  "anima.ui.psychic.psychicShields.shieldPoints.title": "Puntos de vida",
-  "anima.ui.psychic.psychicShields.name.title": "Escudo",
-  "anima.ui.psychic.psychicShields.title": "Escudos Sobrenaturales",
   "anima.ui.psychic.psychicPoints.power.title": "Final",
   "anima.ui.psychic.psychicPoints.title": "CV",
   "anima.ui.psychic.psychicPotential.potential.title": "Potencial",
@@ -535,6 +536,7 @@
   "contextualMenu.common.options.edit": "Editar",
   "contextualMenu.elan.options.addPower": "Añadir poder",
   "contextualMenu.elan.options.deletePower": "Eliminar poder",
+  "contextualMenu.superntarualShield.options.release": "Liberar",
   "dialogs.accept": "Aceptar",
   "dialogs.cancel": "Cancelar",
   "dialogs.continue": "Continuar",
@@ -575,6 +577,7 @@
   "dialogs.items.title.content": "Nombre del título",
   "dialogs.items.weapons.content": "Nombre del arma",
   "dialogs.mod.content": "Modificador",
+  "dialogs.newSupernaturalShield.title": "Nuevo Escudo Sobrenatural",
   "dialogs.psychicShield.difficulty.special": "Realizar Tirada",
   "dialogs.psychicShield.difficulty.title": "Dificultad",
   "dialogs.psychicShield.power.title": "Poder",
