--- a/src/lang/en.json
+++ b/src/lang/en.json
@@ -596,6 +596,10 @@
   "dialogs.spell.title": "Spell",
   "dialogs.actVia.title": "Via / Subvia",
   "dialogs.title": "Dialog",
+  "dialogs.spellCasting.warning.mustChoose": "You must choose between Cast innate spell or Cast prepared spell",
+  "dialogs.spellCasting.warning.innateMagic": "You don't have enough Innate Magic",
+  "dialogs.spellCasting.warning.preparedSpell": "You do not have this Spell Prepared",
+  "dialogs.spellCasting.warning.accumulatedZeon": "You don't have enough Accumulated Zeon",
   "macros.combat.dialog.applyAndCloseButton.title": "Apply and close",
   "anima.ui.systemSettings.autoAcceptCombatRequests.title": "Auto accept combat requests",
   "anima.ui.systemSettings.autoAcceptCombatRequests.hint.title": "Combat requests sent to GM will be auto accepted depending if this option is active",
@@ -707,6 +711,8 @@
   "macros.combat.dialog.waitingAttack.title": "Waiting for attacker...",
   "macros.combat.dialog.waitingDefense.title": "Waiting for defender...",
   "macros.combat.dialog.waitingDefenseForAttack.title": "Waiting for attacker sent the attack...",
+  "macros.combat.dialog.warning.supernaturalShield.mystic": "You do not have any active mystic shields, click on New Shield",
+  "macros.combat.dialog.warning.supernaturalShield.psychic": "You do not have any active psychic shields, click on New Shield",
   "macros.combat.dialog.weapon.critic.title": "Critic",
   "macros.combat.dialog.weapon.title": "Weapon",
   "macros.combat.dialog.weaponAttack.title": "Weapon attack",
