--- a/src/lang/es.json
+++ b/src/lang/es.json
@@ -596,6 +596,10 @@
   "dialogs.spell.title": "Hechizo",
   "dialogs.actVia.title": "Via / Subvia",
   "dialogs.title": "Diálogo",
+  "dialogs.spellCasting.warning.mustChoose": "Debes elegir entre Lanzar conjuro innato o Lanzar conjuro preparado",
+  "dialogs.spellCasting.warning.innateMagic": "No cuentas con suficiente Magia Innata",
+  "dialogs.spellCasting.warning.preparedSpell": "No tienes este Conjuro Preparado",
+  "dialogs.spellCasting.warning.zeonAccumulated": "No cuentas con suficiente Zeon Acumulado",
   "macros.combat.dialog.applyAndCloseButton.title": "Aplicar y salir",
   "macros.combat.dialog.applyAndCloseButtonTooltip.title": "Aplicar cambios como los puntos de fatiga usados o el daño en las fichas de los personajes implicados",
   "macros.combat.dialog.at.title": "TA",
@@ -707,6 +711,8 @@
   "macros.combat.dialog.waitingAttack.title": "Esperando por el atacante...",
   "macros.combat.dialog.waitingDefense.title": "Esperando por el defensor...",
   "macros.combat.dialog.waitingDefenseForAttack.title": "Esperando al atacante para enviar petición de defensa...",
+  "macros.combat.dialog.warning.supernaturalShield.mystic": "No tienes escudos místicos activos, has click en Escudo nuevo",
+  "macros.combat.dialog.warning.supernaturalShield.psychic": "No tienes escudos psíquicos activos, has click en Escudo nuevo",
   "macros.combat.dialog.weapon.critic.title": "Crítico",
   "macros.combat.dialog.weapon.title": "Arma",
   "macros.combat.dialog.weaponAttack.title": "Ataque del arma",
