--- a/src/lang/es.json
+++ b/src/lang/es.json
@@ -707,6 +707,8 @@
   "macros.combat.dialog.spellGrade.intermediate.title": "Intermedio",
   "macros.combat.dialog.spellGrade.title": "Grado del hechizo",
   "macros.combat.dialog.total.title": "Total",
+  "macros.combat.dialog.dobleDamage.title": "Escudo recibe el doble de daño",
+  "macros.combat.dialog.immuneToDamage.title": "Escudo inmune al tipo de daño",
   "macros.combat.dialog.waitRequest.title": "Petición de ataque enviada. Esperando respuesta del GM...",
   "macros.combat.dialog.waitingAttack.title": "Esperando por el atacante...",
   "macros.combat.dialog.waitingDefense.title": "Esperando por el defensor...",
