update-combatModifier-list-GMCombatDialog

--- a/src/lang/en.json
+++ b/src/lang/en.json
@@ -620,6 +620,20 @@
   "macros.combat.dialog.blockButton.title": "Try to block",
   "macros.combat.dialog.blockValue.title": "Block value",
   "macros.combat.dialog.cancelButton.title": "Cancel",
+  "macros.combat.dialog.combatMod.modifier.title": "Modifier",
+  "macros.combat.dialog.combatMod.blindnessPen.title": "Absolute blindness",
+  "macros.combat.dialog.combatMod.dodgeProjectile.title": "Dodge vs. projectile",
+  "macros.combat.dialog.combatMod.parryProjectile.title": "Parry vs. projectile",
+  "macros.combat.dialog.combatMod.maestryParryProjectile.title": "Maestry parry vs. projectile",
+  "macros.combat.dialog.combatMod.shieldParryProjectile.title": "Shield Parry vs. projectile",
+  "macros.combat.dialog.combatMod.parryThrow.title": "Parry vs. throw",
+  "macros.combat.dialog.combatMod.pointBlank.title": "Shoot at point blank range",
+  "macros.combat.dialog.combatMod.highGround.title": "High ground",
+  "macros.combat.dialog.combatMod.poorVisibility.title": "Poor visibility",
+  "macros.combat.dialog.combatMod.targetInCover.title": "Target in cover",
+  "macros.combat.dialog.combatMod.secondaryCritic.title": "Secondary critic used",
+  "macros.combat.dialog.combatMod.multipleDefensesPenalty.title": "Defense penalty",
+  "macros.combat.dialog.combatMod.fatigueUsed.title": "Used fatigue",
   "macros.combat.dialog.counterAttackBonus.title": "Counterattack bonus",
   "macros.combat.dialog.counterAttackButton.title": "Counterattack",
   "macros.combat.dialog.rollResistanceButton.title": "Roll Resistance",
@@ -665,6 +679,9 @@
   "macros.combat.dialog.error.yourSelf.title": "Can't attack yourself!",
   "macros.combat.dialog.fatigue.title": "Fatigue points",
   "macros.combat.dialog.fatigueUsed.title": "Used fatigue",
+  "macros.combat.dialog.gm.psychicPower.title": "Power",
+  "macros.combat.dialog.gm.psychicPotential.title": "Potential",
+  "macros.combat.dialog.gm.projection.title": "Projection",
   "macros.combat.dialog.magicAttack.title": "Throw the spell {spell} to {target}",
   "macros.combat.dialog.magicDefense.title": "Throw the spell {spell} to defend from {target}",
   "macros.combat.dialog.magicProjection.defensive.title": "Defensive",
