--- a/src/lang/es.json
+++ b/src/lang/es.json
@@ -618,6 +618,20 @@
   "macros.combat.dialog.blockButton.title": "Intentar bloquear",
   "macros.combat.dialog.blockValue.title": "Valor de bloqueo",
   "macros.combat.dialog.cancelButton.title": "Cancelar",
+  "macros.combat.dialog.combatMod.modifier.title": "Modificador",
+  "macros.combat.dialog.combatMod.blindnessPen.title": "Ceguera absoluta",
+  "macros.combat.dialog.combatMod.dodgeProjectile.title": "Esquivar contra proyectil",
+  "macros.combat.dialog.combatMod.parryProjectile.title": "Parar contra proyectil",
+  "macros.combat.dialog.combatMod.maestryParryProjectile.title": "Parar con maestria contra proyectil",
+  "macros.combat.dialog.combatMod.shieldParryProjectile.title": "Parar con escudo contra proyectil",
+  "macros.combat.dialog.combatMod.parryThrow.title": "Parar contra lanzamiento",
+  "macros.combat.dialog.combatMod.pointBlank.title": "Disparar a bocajarro",
+  "macros.combat.dialog.combatMod.highGround.title": "Terreno elevado",
+  "macros.combat.dialog.combatMod.poorVisibility.title": "Escasa visibilidad",
+  "macros.combat.dialog.combatMod.targetInCover.title": "Blanco en cobertura",
+  "macros.combat.dialog.combatMod.secondaryCritic.title": "Usar crítico secundario",
+  "macros.combat.dialog.combatMod.multipleDefensesPenalty.title": "Penalizador por defensa continua",
+  "macros.combat.dialog.combatMod.fatigueUsed.title": "Fatiga usada",
   "macros.combat.dialog.counterAttackBonus.title": "Bono al contraataque",
   "macros.combat.dialog.counterAttackButton.title": "Contraatacar",
   "macros.combat.dialog.rollResistanceButton.title": "Tirada de Resistancia",
@@ -665,6 +679,9 @@
   "macros.combat.dialog.error.yourSelf.title": "¡No puedes atacarte a ti mismo!",
   "macros.combat.dialog.fatigue.title": "Puntos de cansancio",
   "macros.combat.dialog.fatigueUsed.title": "Fatiga usada",
+  "macros.combat.dialog.gm.psychicPower.title": "Poder",
+  "macros.combat.dialog.gm.psychicPotential.title": "Potencial",
+  "macros.combat.dialog.gm.projection.title": "Proyección",
   "macros.combat.dialog.magicAttack.title": "Lanza su sortilegio {spell} a {target}",
   "macros.combat.dialog.magicDefense.title": "Lanza el sortilegio {spell} para defenderse del ataque de {target}",
   "macros.combat.dialog.magicProjection.defensive.title": "Defensiva",
