FIX - armor in mistic & psychic

--- a/src/lang/en.json
+++ b/src/lang/en.json
@@ -507,6 +507,7 @@
   "anima.ui.settings.tabVisibility.domine.title": "Domine",
   "anima.ui.settings.tabVisibility.mystic.title": "Mystic",
   "anima.ui.settings.tabVisibility.psychic.title": "Psychic",
+  "anima.ui.settings.tabVisibility.effects.title": "Effects",
   "anima.ui.settings.tabVisibility.title": "Tab visibility",
   "anima.ui.settings.advancedSettings.defenseType.damageResistance.title": "Damage resistance",
   "anima.ui.settings.advancedSettings.defenseType.mass.title": "Mass of enemies",
