--- a/src/lang/es.json
+++ b/src/lang/es.json
@@ -506,6 +506,7 @@
   "anima.ui.settings.tabVisibility.domine.title": "Domine",
   "anima.ui.settings.tabVisibility.mystic.title": "Místico",
   "anima.ui.settings.tabVisibility.psychic.title": "Psíquico",
+  "anima.ui.settings.tabVisibility.effects.title": "Efectos",
   "anima.ui.settings.tabVisibility.title": "Visibilidad de pestañas",
   "anima.ui.settings.advancedSettings.defenseType.damageResistance.title": "Acumulación",
   "anima.ui.settings.advancedSettings.defenseType.mass.title": "Masa de enemigos",
