--- a/src/lang/fr.json
+++ b/src/lang/fr.json
@@ -466,6 +466,7 @@
   "anima.ui.settings.tabVisibility.domine.title": "Domaine",
   "anima.ui.settings.tabVisibility.mystic.title": "Mystique",
   "anima.ui.settings.tabVisibility.psychic.title": "Psychique",
+  "anima.ui.settings.tabVisibility.effects.title": "Efectos",
   "anima.ui.settings.tabVisibility.title": "Table de visibilité",
   "anima.ui.settings.advancedSettings.defenseType.damageResistance.title": "Encaissement",
   "anima.ui.settings.advancedSettings.defenseType.mass.title": "Masse d'ennemis",
