--- a/src/lang/en.json
+++ b/src/lang/en.json
@@ -489,8 +489,8 @@
   "dialogs.cancel": "Cancel",
   "dialogs.continue": "Continue",
   "dialogs.migrations.title": "Migration available",
-  "dialogs.migrations.content": "A migration is about to start. To prevent data loss, please back up your data folder befor applying the migration. kAre you ready to continue?",
-  "dialogs.migrations.success":"Migration #{version} <em>\"{title}\"</em> has been successfully applied.",
+  "dialogs.migrations.content": "A migration is about to start. To prevent data loss, please back up your data folder befor applying the migration. Are you ready to continue?",
+  "dialogs.migrations.success": "Migration #{version} <em>\"{title}\"</em> has been successfully applied.",
   "dialogs.migrations.error": "Migration #{version} has failed to apply:<br>{error}",
   "dialogs.items.advantage.content": "Advantage name",
   "dialogs.items.ammo.content": "Ammo name",
