--- a/src/lang/fr.json
+++ b/src/lang/fr.json
@@ -491,8 +491,8 @@
   "dialogs.cancel": "Annuler",
   "dialogs.continue": "Continuer",
   "dialogs.migrations.title": "Migration available",
-  "dialogs.migrations.content": "A migration is about to start. To prevent data loss, please back up your data folder befor applying the migration. kAre you ready to continue?",
-  "dialogs.migrations.success":"Migration #{version} <em>\"{title}\"</em> has been successfully applied.",
+  "dialogs.migrations.content": "A migration is about to start. To prevent data loss, please back up your data folder befor applying the migration. Are you ready to continue?",
+  "dialogs.migrations.success": "Migration #{version} <em>\"{title}\"</em> has been successfully applied.",
   "dialogs.migrations.error": "Migration #{version} has failed to apply:<br>{error}",
   "dialogs.items.advantage.content": "Nom de l'Avantage",
   "dialogs.items.ammo.content": "Nom des Munitions",
