--- a/src/lang/es.json
+++ b/src/lang/es.json
@@ -730,8 +730,8 @@
   "macros.combat.dialog.waitingAttack.title": "Esperando por el atacante...",
   "macros.combat.dialog.waitingDefense.title": "Esperando por el defensor...",
   "macros.combat.dialog.waitingDefenseForAttack.title": "Esperando al atacante para enviar petición de defensa...",
-  "macros.combat.dialog.warning.supernaturalShield.mystic": "No tienes escudos místicos activos, has click en Escudo nuevo",
-  "macros.combat.dialog.warning.supernaturalShield.psychic": "No tienes escudos psíquicos activos, has click en Escudo nuevo",
+  "macros.combat.dialog.warning.supernaturalShieldNotFound.mystic": "No tienes escudos místicos activos, has click en Escudo nuevo",
+  "macros.combat.dialog.warning.supernaturalShieldNotFound.psychic": "No tienes escudos psíquicos activos, has click en Escudo nuevo",
   "macros.combat.dialog.weapon.critic.title": "Crítico",
   "macros.combat.dialog.weapon.title": "Arma",
   "macros.combat.dialog.weaponAttack.title": "Ataque del arma",
