--- a/src/lang/en.json
+++ b/src/lang/en.json
@@ -730,8 +730,8 @@
   "macros.combat.dialog.waitingAttack.title": "Waiting for attacker...",
   "macros.combat.dialog.waitingDefense.title": "Waiting for defender...",
   "macros.combat.dialog.waitingDefenseForAttack.title": "Waiting for attacker sent the attack...",
-  "macros.combat.dialog.warning.supernaturalShield.mystic": "You do not have any active mystic shields, click on New Shield",
-  "macros.combat.dialog.warning.supernaturalShield.psychic": "You do not have any active psychic shields, click on New Shield",
+  "macros.combat.dialog.warning.supernaturalShieldNotFound.mystic": "You do not have any active mystic shields, click on New Shield",
+  "macros.combat.dialog.warning.supernaturalShieldNotFound.psychic": "You do not have any active psychic shields, click on New Shield",
   "macros.combat.dialog.weapon.critic.title": "Critic",
   "macros.combat.dialog.weapon.title": "Weapon",
   "macros.combat.dialog.weaponAttack.title": "Weapon attack",
