--- a/src/lang/en.json
+++ b/src/lang/en.json
@@ -394,7 +394,7 @@
   "anima.ui.psychic.psychicPowers.discipline.electromagnetism.title": "Electromagnetism",
   "anima.ui.psychic.psychicPowers.discipline.teleportation.title": "Teleportation",
   "anima.ui.psychic.psychicPowers.discipline.light.title": "Light",
-  "anima.ui.psychic.psychicPowers.discipline.hipersensibilidad.title": "Hypersensitivity",
+  "anima.ui.psychic.psychicPowers.discipline.hypersensitivity.title": "Hypersensitivity",
   "anima.ui.psychic.psychicPowers.discipline.matrixPowers.title": "-",
   "anima.ui.psychic.psychicPowers.power.footer.bonus.title": "Bonus",
   "anima.ui.psychic.psychicPowers.power.footer.hasMaintenance.title": "Maint.",
