--- a/src/lang/es.json
+++ b/src/lang/es.json
@@ -619,7 +619,7 @@
   "macros.combat.dialog.blockValue.title": "Valor de bloqueo",
   "macros.combat.dialog.cancelButton.title": "Cancelar",
   "macros.combat.dialog.combatMod.modifier.title": "Modificador",
-  "macros.combat.dialog.combatMod.blindnessPen.title": "Ceguera absoluta",
+  "macros.combat.dialog.combatMod.blindness.title": "Ceguera absoluta",
   "macros.combat.dialog.combatMod.dodgeProjectile.title": "Esquivar contra proyectil",
   "macros.combat.dialog.combatMod.parryProjectile.title": "Parar contra proyectil",
   "macros.combat.dialog.combatMod.maestryParryProjectile.title": "Parar con maestria contra proyectil",
