update-psychic-discipline-row

--- a/src/lang/en.json
+++ b/src/lang/en.json
@@ -372,7 +372,8 @@
   "anima.ui.psychic.mentalPattern.penalty.title": "Penalty",
   "anima.ui.psychic.mentalPattern.title": "Mental Patterns",
   "anima.ui.psychic.psychicDiscipline.title": "Psychic Disciplines",
-  "anima.ui.psychic.psychicDiscipline.name.imbalance": "Psy. Imb.",
+  "anima.ui.psychic.psychicDiscipline.name.title": "Discipline",
+  "anima.ui.psychic.psychicDiscipline.imbalance.title": "Psy. Imb.",
   "anima.ui.psychic.psychicPoints.power.title": "Final",
   "anima.ui.psychic.psychicPoints.title": "PP",
   "anima.ui.psychic.psychicPotential.potential.title": "Potential",
