--- a/src/lang/es.json
+++ b/src/lang/es.json
@@ -372,7 +372,8 @@
   "anima.ui.psychic.mentalPattern.penalty.title": "Penalizador",
   "anima.ui.psychic.mentalPattern.title": "Patrones Mentales",
   "anima.ui.psychic.psychicDiscipline.title": "Disciplinas Psíquicas",
-  "anima.ui.psychic.psychicDiscipline.name.imbalance": "Des. Psq.",
+  "anima.ui.psychic.psychicDiscipline.name.title": "Disciplina",
+  "anima.ui.psychic.psychicDiscipline.imbalance.title": "Des. Psq.",
   "anima.ui.psychic.psychicPoints.power.title": "Final",
   "anima.ui.psychic.psychicPoints.title": "CV",
   "anima.ui.psychic.psychicPotential.potential.title": "Potencial",
