--- a/src/lang/en.json
+++ b/src/lang/en.json
@@ -397,6 +397,13 @@
   "anima.ui.psychic.psychicPowers.discipline.light.title": "Light",
   "anima.ui.psychic.psychicPowers.discipline.hypersensitivity.title": "Hypersensitivity",
   "anima.ui.psychic.psychicPowers.discipline.matrixPowers.title": "-",
+  "anima.ui.psychic.psychicPowers.mentalPattern.introversion.title": "Introversion",
+  "anima.ui.psychic.psychicPowers.mentalPattern.extroversion.title": "Extroversion",
+  "anima.ui.psychic.psychicPowers.mentalPattern.craziness.title": "Craziness",
+  "anima.ui.psychic.psychicPowers.mentalPattern.psychopathy.title": "Psychopathy",
+  "anima.ui.psychic.psychicPowers.mentalPattern.compassion.title": "Compassion",
+  "anima.ui.psychic.psychicPowers.mentalPattern.cowardice.title": "Cowardice",
+  "anima.ui.psychic.psychicPowers.mentalPattern.courage.title": "Courage",
   "anima.ui.psychic.psychicPowers.power.footer.bonus.title": "Bonus",
   "anima.ui.psychic.psychicPowers.power.footer.hasMaintenance.title": "Maint.",
   "anima.ui.psychic.psychicPowers.power.footer.visible.title": "Visible",
@@ -584,6 +591,7 @@
   "dialogs.psychicShield.power.title": "Power",
   "dialogs.psychicDiscipline.imbalance.title": "Psychic Imbalance?",
   "dialogs.psychicDiscipline.title": "Psychic Discipline",
+  "dialogs.mentalPattern.title": "Mental Pattern",
   "dialogs.castSpell.override.title": "Do not validate",
   "dialogs.castSpell.innate.title": "Innate",
   "dialogs.castSpell.prepared.title": "Prepared",
