--- a/src/lang/es.json
+++ b/src/lang/es.json
@@ -397,6 +397,13 @@
   "anima.ui.psychic.psychicPowers.discipline.light.title": "Luz",
   "anima.ui.psychic.psychicPowers.discipline.hypersensitivity.title": "Hipersensibilidad",
   "anima.ui.psychic.psychicPowers.discipline.matrixPowers.title": "-",
+  "anima.ui.psychic.psychicPowers.mentalPattern.introversion.title": "Introversión",
+  "anima.ui.psychic.psychicPowers.mentalPattern.extroversion.title": "Extroversión",
+  "anima.ui.psychic.psychicPowers.mentalPattern.craziness.title": "Locura",
+  "anima.ui.psychic.psychicPowers.mentalPattern.psychopathy.title": "Psicopatía",
+  "anima.ui.psychic.psychicPowers.mentalPattern.compassion.title": "Compasión",
+  "anima.ui.psychic.psychicPowers.mentalPattern.cowardice.title": "Cobardía",
+  "anima.ui.psychic.psychicPowers.mentalPattern.courage.title": "Valentía",
   "anima.ui.psychic.psychicPowers.power.footer.bonus.title": "Bono",
   "anima.ui.psychic.psychicPowers.power.footer.hasMaintenance.title": "Mant.",
   "anima.ui.psychic.psychicPowers.power.footer.visible.title": "Visible",
@@ -584,6 +591,7 @@
   "dialogs.psychicShield.power.title": "Poder",
   "dialogs.psychicDiscipline.imbalance.title": "Desequilibrio Psíquico?",
   "dialogs.psychicDiscipline.title": "Disciplina Psíquica",
+  "dialogs.mentalPattern.title": "Patrón Mental",
   "dialogs.castSpell.override.title": "No validar",
   "dialogs.castSpell.innate.title": "Innato",
   "dialogs.castSpell.prepared.title": "Preparado",
