update-psychic fatigue resistance

--- a/src/lang/es.json
+++ b/src/lang/es.json
@@ -376,6 +376,8 @@
   "anima.ui.psychic.psychicDiscipline.imbalance.title": "Des. Psq.",
   "anima.ui.psychic.psychicPoints.power.title": "Final",
   "anima.ui.psychic.psychicPoints.title": "CV",
+  "anima.ui.psychic.psychicSettings.title": "Ajustes Psíquicos",
+  "anima.ui.psychic.psychicSettings.fatigueResistance.title": "Resistencia a la Fatiga",
   "anima.ui.psychic.psychicPotential.potential.title": "Potencial",
   "anima.ui.psychic.psychicPotential.title": "Potencial Psíquico",
   "anima.ui.psychic.psychicPowers.actionType.active.title": "Activo",
