--- a/src/lang/en.json
+++ b/src/lang/en.json
@@ -376,6 +376,8 @@
   "anima.ui.psychic.psychicDiscipline.imbalance.title": "Psy. Imb.",
   "anima.ui.psychic.psychicPoints.power.title": "Final",
   "anima.ui.psychic.psychicPoints.title": "PP",
+  "anima.ui.psychic.psychicSettings.title": "Psychic Settings",
+  "anima.ui.psychic.psychicSettings.fatigueResistance.title": "Fatigue Resistance",
   "anima.ui.psychic.psychicPotential.potential.title": "Potential",
   "anima.ui.psychic.psychicPotential.title": "Psychic potential",
   "anima.ui.psychic.psychicPowers.actionType.active.title": "Active",
